chore: prepare for modules